[package]
name = "lingua-franca"
version = "0.2.0"
edition = "2021"

description = "Packagemanager for Lingua-Franca"
homepage = "https://lf-lang.org"
repository = "https://github.com/lf-lang/lingo"


[[bin]]
name = "lingo"
publish = true
path = "./src/main.rs"

[dependencies]

clap = { version = "4.1", features = ["derive"] }
os-version = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
which = "5.0"
regex = "1.8"
lazy_static = "1.4"
rayon = "1.7"
toml = {version = "0.8"}
crossbeam = "0.8"
termion = "2.0"
git2 = "0.18"
run_script = "0.10"
tempfile = "3.0"
