[package]
name = "lingua-franca"
version = "0.2.0"
edition = "2021"

description = "Package manager and build tool for the Lingua Franca coordination language"
homepage = "https://lf-lang.org"
repository = "https://github.com/lf-lang/lingo"
license = "BSD-2-Clause"

[[bin]]
name = "lingo"
publish = true
path = "./src/main.rs"

[dependencies]

clap = { version = "4.1", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
which = "6.0"
regex = "1.8"
lazy_static = "1.4"
rayon = "1.7"
toml = {version = "0.8"}
crossbeam = "0.8"
git2 = "0.18"
tempfile = "3.0"
url = { version = "2.5", features = ["serde"] }
anyhow = "1.0"
versions = { git = "https://github.com/tanneberger/rs-versions.git", features = ["serde"]}
log = "0.4"
sha1dir = { version = "1.0", git = "https://github.com/tanneberger/sha1dir" }
colored = "2.1.0"
