[package]
name = "lingua-franca"
version = "0.2.1"
edition = "2021"

description = "Package manager and build tool for the Lingua Franca coordination language"
homepage = "https://lf-lang.org"
repository = "https://github.com/lf-lang/lingo"
license = "BSD-2-Clause"

[lib]
name = "liblingo"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lingo"
publish = true
path = "./src/main.rs"
required-features = ["binary"]

[features]
default = ["binary"]
binary = ["which", "git2"]

[dependencies]

clap = { version = "4.1", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.8"
lazy_static = "1.4"
rayon = "1.7"
toml = { version = "0.8" }
crossbeam = "0.8"
run_script = "0.11"
getrandom = {version="0.2", features = ["js"]}
which = { version = "6.0", optional = true }
git2 = { version = "0.19", optional = true, default-features=false, features = ["https"]}
print_logger = "0.2.0"
tempfile = "3.0"
url = { version = "2.5", features = ["serde"] }
anyhow = "1.0"
versions = { version = "6.3.2", features = ["serde"]}
log = "0.4"
colored = "2.1.0"
parking_lot = "0.12"
sha1 = "0.10"
